{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 91,
  "lineage": "100cd90d-5046-1a98-d884-e539913a8939",
  "resources": [
    {
      "module": "module.http_lb",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "http_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/zones/us-central1-a/instanceGroups/mig-instance-group-1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/zones/us-central1-a/instanceGroups/mig-instance-group-2",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2024-10-15T05:56:25.589-07:00",
            "enable_cdn": false,
            "fingerprint": "r7_0TRNzb-Y=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/global/healthChecks/http-health-check"
            ],
            "id": "projects/versatile-nomad-438205-q7/global/backendServices/http-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "http-backend",
            "port_name": "http",
            "project": "versatile-nomad-438205-q7",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/global/backendServices/http-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "module.http_lb.google_compute_health_check.http_health_check",
            "module.mig_vpc1.google_compute_instance_group_manager.mig",
            "module.mig_vpc1.google_compute_instance_template.instance_template",
            "module.mig_vpc2.google_compute_instance_group_manager.mig",
            "module.mig_vpc2.google_compute_instance_template.instance_template",
            "module.vpc1.google_compute_network.vpc_network",
            "module.vpc1.google_compute_subnetwork.subnet",
            "module.vpc2.google_compute_network.vpc_network",
            "module.vpc2.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.http_lb",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "http_lb_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.160.91.77",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-10-15T05:55:05.615-07:00",
            "id": "projects/versatile-nomad-438205-q7/global/addresses/http-lb-ip",
            "name": "http-lb-ip",
            "prefix_length": 0,
            "project": "versatile-nomad-438205-q7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/global/addresses/http-lb-ip"
          }
        }
      ]
    },
    {
      "module": "module.http_lb",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/versatile-nomad-438205-q7/global/forwardingRules/http-lb-rule",
            "ip_address": "34.160.91.77",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "http-lb-rule",
            "port_range": "80",
            "project": "versatile-nomad-438205-q7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/global/forwardingRules/http-lb-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/global/targetHttpProxies/http-lb-proxy"
          },
          "dependencies": [
            "module.http_lb.google_compute_backend_service.http_backend",
            "module.http_lb.google_compute_global_address.http_lb_ip",
            "module.http_lb.google_compute_health_check.http_health_check",
            "module.http_lb.google_compute_target_http_proxy.http_proxy",
            "module.http_lb.google_compute_url_map.http_map",
            "module.mig_vpc1.google_compute_instance_group_manager.mig",
            "module.mig_vpc1.google_compute_instance_template.instance_template",
            "module.mig_vpc2.google_compute_instance_group_manager.mig",
            "module.mig_vpc2.google_compute_instance_template.instance_template",
            "module.vpc1.google_compute_network.vpc_network",
            "module.vpc1.google_compute_subnetwork.subnet",
            "module.vpc2.google_compute_network.vpc_network",
            "module.vpc2.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.http_lb",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-10-15T05:57:10.955-07:00",
            "id": "projects/versatile-nomad-438205-q7/global/targetHttpProxies/http-lb-proxy",
            "name": "http-lb-proxy",
            "project": "versatile-nomad-438205-q7",
            "proxy_bind": false,
            "proxy_id": 2292275356669040713,
            "self_link": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/global/targetHttpProxies/http-lb-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/global/urlMaps/http-lb-map"
          },
          "dependencies": [
            "module.http_lb.google_compute_backend_service.http_backend",
            "module.http_lb.google_compute_health_check.http_health_check",
            "module.http_lb.google_compute_url_map.http_map",
            "module.mig_vpc1.google_compute_instance_group_manager.mig",
            "module.mig_vpc1.google_compute_instance_template.instance_template",
            "module.mig_vpc2.google_compute_instance_group_manager.mig",
            "module.mig_vpc2.google_compute_instance_template.instance_template",
            "module.vpc1.google_compute_network.vpc_network",
            "module.vpc1.google_compute_subnetwork.subnet",
            "module.vpc2.google_compute_network.vpc_network",
            "module.vpc2.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.http_lb",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "http_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-10-15T05:56:58.549-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/global/backendServices/http-backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "b5TgrEIH4ls=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/versatile-nomad-438205-q7/global/urlMaps/http-lb-map",
            "map_id": 2325180939369699445,
            "name": "http-lb-map",
            "path_matcher": [],
            "project": "versatile-nomad-438205-q7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/global/urlMaps/http-lb-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.http_lb.google_compute_backend_service.http_backend",
            "module.http_lb.google_compute_health_check.http_health_check",
            "module.mig_vpc1.google_compute_instance_group_manager.mig",
            "module.mig_vpc1.google_compute_instance_template.instance_template",
            "module.mig_vpc2.google_compute_instance_group_manager.mig",
            "module.mig_vpc2.google_compute_instance_template.instance_template",
            "module.vpc1.google_compute_network.vpc_network",
            "module.vpc1.google_compute_subnetwork.subnet",
            "module.vpc2.google_compute_network.vpc_network",
            "module.vpc2.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-10-15T05:55:27.687-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/versatile-nomad-438205-q7/global/firewalls/vpc-network-1-allow-http-https",
            "log_config": [],
            "name": "vpc-network-1-allow-http-https",
            "network": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/global/networks/vpc-network-1",
            "priority": 1000,
            "project": "versatile-nomad-438205-q7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/global/firewalls/vpc-network-1-allow-http-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/versatile-nomad-438205-q7/global/networks/vpc-network-1",
            "mtu": 0,
            "name": "vpc-network-1",
            "project": "versatile-nomad-438205-q7",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/global/networks/vpc-network-1"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-10-15T05:55:28.516-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/versatile-nomad-438205-q7/regions/us-central1/subnetworks/subnet-1",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/global/networks/vpc-network-1",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "versatile-nomad-438205-q7",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/regions/us-central1/subnetworks/subnet-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc1.google_compute_network.vpc_network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-10-15T05:55:16.749-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/versatile-nomad-438205-q7/global/firewalls/vpc-network-2-allow-http-https",
            "log_config": [],
            "name": "vpc-network-2-allow-http-https",
            "network": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/global/networks/vpc-network-2",
            "priority": 1000,
            "project": "versatile-nomad-438205-q7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/global/firewalls/vpc-network-2-allow-http-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc2.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/versatile-nomad-438205-q7/global/networks/vpc-network-2",
            "mtu": 0,
            "name": "vpc-network-2",
            "project": "versatile-nomad-438205-q7",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/global/networks/vpc-network-2"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-10-15T05:55:17.743-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/versatile-nomad-438205-q7/regions/us-central1/subnetworks/subnet-2",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "subnet-2",
            "network": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/global/networks/vpc-network-2",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "versatile-nomad-438205-q7",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/regions/us-central1/subnetworks/subnet-2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc2.google_compute_network.vpc_network"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}